# I7APK

./: .gitignore  I7APK.sln
CMake_version/I7APK/: CMakeLists.txt  FightPokemon.h  FightPokemonAsync.h  FightRecursivePokemon.h  I7APK.cpp  I7APK.h  IfThenElse.h  Pokemon.h  PokemonFightCalculator.h  PokemonStatsResource.h  PokemonVariant.h
I7APK/: CompilePokemon.h  FightCompilePokemon.h  FightPokemon.h  FightPokemonAsync.h  FightRecursivePokemon.h  I7APK.cpp  I7APK.vcxproj  I7APK.vcxproj.filters  Pokedex.h  Pokemon.cpp  Pokemon.h  PokemonFightCalculator.h  PokemonStatsResource.h  PokemonVariant.cpp  PokemonVariant.h  Traits.cpp  TypeList.h  TypePokemon.h  TypeTraits.h  pokemain  pokemonVariant.h  typePokemon.h
